[package]
name = "axum-google-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }
dotenv = "0.15.0"
http = "1.2.0"
oauth-axum = "0.1.4"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
